WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
71439
ValueRecovery should be moved out of the DFG JIT
https://bugs.webkit.org/show_bug.cgi?id=71439
Summary
ValueRecovery should be moved out of the DFG JIT
Filip Pizlo
Reported
2011-11-02 23:45:26 PDT
The ValueRecovery functionality (and associated classes and enums such as DataFormat and VirtualRegister) should be moved out of the dfg/ directory and into the bytecode/ directory, since this information will need to be saved in CodeBlocks to support features such as function.arguments.
Attachments
the patch
(52.00 KB, patch)
2011-11-02 23:47 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
the patch
(37.10 KB, patch)
2011-11-02 23:50 PDT
,
Filip Pizlo
oliver
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2011-11-02 23:47:21 PDT
Created
attachment 113436
[details]
the patch
WebKit Review Bot
Comment 2
2011-11-02 23:49:35 PDT
Attachment 113436
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/ChangeLog', u'Source..." exit_code: 1 Source/JavaScriptCore/bytecode/ValueRecovery.h:325: "DataFormat.h" already included at Source/JavaScriptCore/bytecode/ValueRecovery.h:29 [build/include] [4] Source/JavaScriptCore/bytecode/ValueRecovery.h:326: "JSValue.h" already included at Source/JavaScriptCore/bytecode/ValueRecovery.h:30 [build/include] [4] Source/JavaScriptCore/bytecode/ValueRecovery.h:327: "MacroAssembler.h" already included at Source/JavaScriptCore/bytecode/ValueRecovery.h:31 [build/include] [4] Source/JavaScriptCore/bytecode/ValueRecovery.h:328: "VirtualRegister.h" already included at Source/JavaScriptCore/bytecode/ValueRecovery.h:32 [build/include] [4] Source/JavaScriptCore/bytecode/ValueRecovery.h:329: "wtf/Platform.h" already included at Source/JavaScriptCore/bytecode/ValueRecovery.h:33 [build/include] [4] Source/JavaScriptCore/bytecode/VirtualRegister.h:69: "wtf/Platform.h" already included at Source/JavaScriptCore/bytecode/VirtualRegister.h:29 [build/include] [4] Source/JavaScriptCore/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Source/JavaScriptCore/bytecode/DataFormat.h:211: "wtf/Assertions.h" already included at Source/JavaScriptCore/bytecode/DataFormat.h:29 [build/include] [4] Total errors found: 8 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 3
2011-11-02 23:50:58 PDT
Created
attachment 113437
[details]
the patch Fixed changelog and merge issues.
Filip Pizlo
Comment 4
2011-11-02 23:56:12 PDT
Landed in
http://trac.webkit.org/changeset/99144
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug