ValueRecovery should be moved out of the DFG JIT https://bugs.webkit.org/show_bug.cgi?id=71439

Reviewed by Oliver Hunt.

* JavaScriptCore.xcodeproj/project.pbxproj:
* bytecode/DataFormat.h: Added.
(JSC::dataFormatToString):
(JSC::needDataFormatConversion):
(JSC::isJSFormat):
(JSC::isJSInteger):
(JSC::isJSDouble):
(JSC::isJSCell):
(JSC::isJSBoolean):
* bytecode/ValueRecovery.h: Added.
(JSC::ValueRecovery::ValueRecovery):
(JSC::ValueRecovery::alreadyInRegisterFile):
(JSC::ValueRecovery::alreadyInRegisterFileAsUnboxedInt32):
(JSC::ValueRecovery::alreadyInRegisterFileAsUnboxedCell):
(JSC::ValueRecovery::alreadyInRegisterFileAsUnboxedBoolean):
(JSC::ValueRecovery::inGPR):
(JSC::ValueRecovery::inPair):
(JSC::ValueRecovery::inFPR):
(JSC::ValueRecovery::displacedInRegisterFile):
(JSC::ValueRecovery::constant):
(JSC::ValueRecovery::technique):
(JSC::ValueRecovery::isInRegisters):
(JSC::ValueRecovery::gpr):
(JSC::ValueRecovery::tagGPR):
(JSC::ValueRecovery::payloadGPR):
(JSC::ValueRecovery::fpr):
(JSC::ValueRecovery::virtualRegister):
(JSC::ValueRecovery::dump):
* bytecode/VirtualRegister.h: Added.
* dfg/DFGGenerationInfo.h:
(JSC::DFG::GenerationInfo::isJSFormat):
* dfg/DFGSpeculativeJIT.cpp:
(JSC::DFG::ValueSource::dump):
* dfg/DFGSpeculativeJIT.h:
* dfg/DFGVariableAccessData.h:



Canonical link: https://commits.webkit.org/87735@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99144 268f45cc-cd09-0410-ab3c-d52691b4dbfc