Source/JavaScriptCore/dfg/DFGGenerationInfo.h
@@ -28,155 +28,10 @@
 
 #if ENABLE(DFG_JIT)
 
+#include "DataFormat.h"
 #include <dfg/DFGJITCompiler.h>
 
 namespace JSC { namespace DFG {
-
-// === DataFormat ===
-//
-// This enum tracks the current representation in which a value is being held.
-// Values may be unboxed primitives (int32, double, or cell), or boxed as a JSValue.
-// For boxed values, we may know the type of boxing that has taken place.
-// (May also need bool, array, object, string types!)
-enum DataFormat {
-    DataFormatNone = 0,
-    DataFormatInteger = 1,
-    DataFormatDouble = 2,
-    DataFormatBoolean = 3,
-    DataFormatCell = 4,
-    DataFormatStorage = 5,
-    DataFormatJS = 8,
-    DataFormatJSInteger = DataFormatJS | DataFormatInteger,
-    DataFormatJSDouble = DataFormatJS | DataFormatDouble,
-    DataFormatJSCell = DataFormatJS | DataFormatCell,
-    DataFormatJSBoolean = DataFormatJS | DataFormatBoolean
-};
-
-#ifndef NDEBUG
-inline const char* dataFormatToString(DataFormat dataFormat)
-{
-    switch (dataFormat) {
-    case DataFormatNone:
-        return "None";
-    case DataFormatInteger:
-        return "Integer";
-    case DataFormatDouble:
-        return "Double";
-    case DataFormatCell:
-        return "Cell";
-    case DataFormatBoolean:
-        return "Boolean";
-    case DataFormatStorage:
-        return "Storage";
-    case DataFormatJS:
-        return "JS";
-    case DataFormatJSInteger:
-        return "JSInteger";
-    case DataFormatJSDouble:
-        return "JSDouble";
-    case DataFormatJSCell:
-        return "JSCell";
-    case DataFormatJSBoolean:
-        return "JSBoolean";
-    default:
-        return "Unknown";
-    }
-}
-#endif
-
-#if USE(JSVALUE64)
-inline bool needDataFormatConversion(DataFormat from, DataFormat to)
-{
-    ASSERT(from != DataFormatNone);
-    ASSERT(to != DataFormatNone);
-    switch (from) {
-    case DataFormatInteger:
-    case DataFormatDouble:
-        return to != from;
-    case DataFormatCell:
-    case DataFormatJS:
-    case DataFormatJSInteger:
-    case DataFormatJSDouble:
-    case DataFormatJSCell:
-    case DataFormatJSBoolean:
-        switch (to) {
-        case DataFormatInteger:
-        case DataFormatDouble:
-            return true;
-        case DataFormatCell:
-        case DataFormatJS:
-        case DataFormatJSInteger:
-        case DataFormatJSDouble:
-        case DataFormatJSCell:
-        case DataFormatJSBoolean:
-            return false;
-        default:
-            // This captures DataFormatBoolean, which is currently unused.
-            ASSERT_NOT_REACHED();
-        }
-    case DataFormatStorage:
-        ASSERT(to == DataFormatStorage);
-        return false;
-    default:
-        // This captures DataFormatBoolean, which is currently unused.
-        ASSERT_NOT_REACHED();
-    }
-    return true;
-}
-
-#elif USE(JSVALUE32_64)
-inline bool needDataFormatConversion(DataFormat from, DataFormat to)
-{
-    ASSERT(from != DataFormatNone);
-    ASSERT(to != DataFormatNone);
-    switch (from) {
-    case DataFormatInteger:
-    case DataFormatCell:
-    case DataFormatBoolean:
-        return ((to & DataFormatJS) || to == DataFormatDouble);
-    case DataFormatDouble:
-    case DataFormatJSDouble:
-        return (to != DataFormatDouble && to != DataFormatJSDouble);
-    case DataFormatJS:
-    case DataFormatJSInteger:
-    case DataFormatJSCell:
-    case DataFormatJSBoolean:
-        return (!(to & DataFormatJS) || to == DataFormatJSDouble);
-    case DataFormatStorage:
-        ASSERT(to == DataFormatStorage);
-        return false;
-    default:
-        ASSERT_NOT_REACHED();
-    }
-    return true;
-}
-#endif
-
-inline bool isJSFormat(DataFormat format, DataFormat expectedFormat)
-{
-    ASSERT(expectedFormat & DataFormatJS);
-    return (format | DataFormatJS) == expectedFormat;
-}
-
-inline bool isJSInteger(DataFormat format)
-{
-    return isJSFormat(format, DataFormatJSInteger);
-}
-
-inline bool isJSDouble(DataFormat format)
-{
-    return isJSFormat(format, DataFormatJSDouble);
-}
-
-inline bool isJSCell(DataFormat format)
-{
-    return isJSFormat(format, DataFormatJSCell);
-}
-
-inline bool isJSBoolean(DataFormat format)
-{
-    return isJSFormat(format, DataFormatJSBoolean);
-}
 
 // === GenerationInfo ===
 //
@@ -306,7 +161,7 @@ public:
     
     bool isJSFormat(DataFormat expectedFormat)
     {
-        return DFG::isJSFormat(registerFormat(), expectedFormat) || DFG::isJSFormat(spillFormat(), expectedFormat);
+        return JSC::isJSFormat(registerFormat(), expectedFormat) || JSC::isJSFormat(spillFormat(), expectedFormat);
     }
     
     bool isJSInteger()
